# truenas-slack-to-ntfy

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: main.rs
