[package]
name = "truenas-slack-to-ntfy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
